--- a/callofduty.css
+++ b/callofduty.css
@@ -57,7 +57,7 @@ nav input[type="search"] {
 /* section one */
 
 .section_one {
-  background-image: url(./img/sec1bg.png);
+  background-image: url(./img/2strbg.png);
   background-position: center center; 
   background-repeat: no-repeat;
 }
@@ -66,7 +66,7 @@ nav input[type="search"] {
   font-weight: 400;
 font-size: 36px;
 color: #fff;
-padding-top: 290px;
+padding-top: 140px;
 }
 
 .section_one .btm {
@@ -105,86 +105,49 @@ color: #fff;
   margin-left: 840px;
 }
 
-/* sec two */
 
-.section_two {
-  background-color: #979797;
-}
-
-.section_two .text {
-  margin: 0 auto;
-  text-align: center;
-  padding-top: 60px;
-  margin-bottom: 60px;
-}
-
-.section_two .text img {
-  margin-bottom: 15px;
-}
-
-.section_two .text .top {
-  font-weight: 400;
-font-size: 48px;
-color: #fff;
-}
-
-.section_two .text .btm {
-  font-weight: 400;
-font-size: 36px;
-color: #fff;
-}
-
-.section_two .cards {
+/* section two */
+.section_two .buttons{
   display: flex;
+  align-items: center;
+  gap: 15px;
+  padding-bottom: 101px;
   justify-content: center;
-  gap: 30px;
-  padding-bottom: 160px;
 }
 
-.section_two .card {
-  width: 318px;
-  height: 420px;
-  background-color: #fff;
-}
-
-.section_two .card .cardtext {
-  margin: 0 auto;
-  width: 290px;
-}
-
-.section_two .card p.top {
-  font-weight: 400;
-font-size: 18px;
-color: #435766;
-margin-bottom: 20px;
-}
-
-.section_two .card p.btm {
-  font-weight: 400;
-font-size: 24px;
-color: #435766;
-margin-bottom: 30px;
-}
-
-.section_two .card img {
-  margin-bottom: 15px;
-}
-
-.section_two .card .btn {
-  margin: 0 auto;
-}
-
-.section_two .card .btn a {
+.section_two .greenbtn {
   font-weight: 400;
 font-size: 16px;
+padding: 10px 22px;
+background-color: #8dd83d;
+border-radius: 7px;
 color: #fff;
-  padding: 20px 25px;
-  background-color: #3ed33e;
 }
 
-.section_two .drugaya {
-  font-size: 100px;
+.section_two .greybtn {
+  font-weight: 400;
+font-size: 16px;
+padding: 10px 22px;
+background-color: #5c5e5a;
+border-radius: 7px;
+color: #fff;
 }
+
+.section_two p.one {
+  text-align: center;
+  font-weight: 400;
+font-size: 36px;
+color: #435766;
+padding-top: 100px;
+margin-bottom: 200px;
+}
+
+.section_two .video {
+  margin-left: 480px;
+  margin-bottom: 100px;
+}
+
+
 
 
 
